--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
     "@types/react-router-dom": "^5.3.3",
-    "@types/styled-components": "^5.1.23",
     "@types/webpack-env": "^1.16.3",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
@@ -46,10 +45,8 @@
     "webpack-dev-server": "^4.7.3"
   },
   "dependencies": {
-    "@theturkeydev/gobble-lib-react": "^1.0.46",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.1",
-    "styled-components": "^5.3.3"
+    "react-router-dom": "^6.2.1"
   }
 }
